# liberty2json

./: .gitignore  .gitmodules  CMakeLists.txt  INSTALLING.md  Makefile  README.md  flake.nix
.github/workflows/: ci.yml  release.yml
include/: LibertyParser.hpp  STALibertyParser.hpp  STALibertyTranslator.hpp
src/: CMakeLists.txt  STALibertyParser.cpp  STALibertyTranslator.cpp  liberty2json.cpp
test/: buspindir.lib  buspindir.ref.json  buspindir.ref.v  conftest.py  create_reference_files.py  defgroup.ref.json  example.2clibnam.ref.json  example.2libnam.ref.json  example.2pin.ref.json  example.access.ref.json  example.access.ref.v  example.badcurly.ref.json  example.baddir.ref.json  example.badiface.ref.json  example.badmem.ref.json  example.badmem2.ref.json  example.badmem2.ref.v  example.badmod.ref.json  example.badmod2.ref.json  example.badtech.ref.json  example.badtim.ref.json  example.badval.ref.json  example.badval2.ref.json  example.badval3.ref.json  example.buspindir.ref.json  example.ccs.ref.json  example.closesemi.ref.json  example.coloncell.ref.json  example.colontempl.ref.json  example.driver.ref.json  example.dup1.ref.json  example.dup2.ref.json  example.ffbank.ref.json  example.ffbank.ref.v  example.fpga.ref.json  example.icg.ref.json  example.icg.ref.v  example.include.ref.json  example.lut.ref.json  example.lut2.ref.json  (+23 more)
